# TermiPics

./: .gitignore  README.md
.githooks/: pre-commit
client/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json
client/src/: App.jsx  index.css  main.jsx
client/src/components/: ImageCard.jsx  ImageUpload.jsx  Navbar.jsx  Notification.jsx  Pagination.jsx  ProtectedRoute.jsx  RollingArt.jsx  Spinner.jsx
client/src/context/: AuthContext.jsx
client/src/contexts/: AuthProvider.jsx
client/src/pages/: Dashboard.jsx  Home.jsx  Login.jsx  Signup.jsx
client/src/utils/: cookies.js
server/: pyproject.toml  requirements.txt
server/app/: config.py  main.py  models.py  schemas.py
server/app/dependencies/: db.py  storage.py
server/app/routes/: auth.py  image.py  images.py  user.py  users.py
server/app/utils/: auth.py  db.py  image.py  storage.py  supabase.py
server/src/: config.py
