[project]
name = "TermiPics"
version = "0.1.0"
description = "Server side for TermiPics, an image serving service."
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.12",
    "google-auth>=2.39.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "supabase>=2.15.0",
]
